--- a/Tasks/templates/tasks/index.html
+++ b/Tasks/templates/tasks/index.html
@@ -27,7 +27,7 @@
 {% else %}
     <p>No tasks are available.</p>
 {% endif %}
-<a class="link" href="/add"> Add some tasks for team users </a>
+<a class="link" href="add"> Add some tasks for team users </a>
 </div>
 {% endblock %}
 
