--- a/People/templates/base.html
+++ b/People/templates/base.html
@@ -9,11 +9,12 @@
     <div class="navbar">
         <div class="section-inner clearfix">
 		<nav>
-			<a class="navlink" href="/">Tasks</a>
+			<a class="navlink" href="/tasks">Tasks</a>
 			<a class="navlink" href="/people">People</a>
 			<a class="navlink" href="/plans">Plans</a>
 			<a class="navlink" href="/ideas">Ideas</a>
 			<a class="navlink" href="/files">Files</a>
+			<a class="logout" href="/logout">Logout</a>
 		</nav>
 		</div>
 	</div>
