--- a/People/templates/people/delete.html
+++ b/People/templates/people/delete.html
@@ -10,6 +10,7 @@
 <h3>User: {{ user.name }}</h3>
 <form action="" method="get">
     Secret Key: <input type="password" name="sk"><br>
+    Admin Key: <input type="password" name="ak"><br>
     <input type="submit" value="Delete">
 </form>
 </div>
