--- a/Tasks/templates/tasks/filterdate.html
+++ b/Tasks/templates/tasks/filterdate.html
@@ -1,7 +1,7 @@
 {% extends "base.html"  %}
 
 {% block title %}
-    Tasks - {{ block.super }}
+    Tasks Filter Date - {{ block.super }}
 {% endblock %}
 
 {% block content %}
