--- a/People/templates/error.html
+++ b/People/templates/error.html
@@ -1,7 +1,7 @@
 {% extends "base.html"  %}
 
 {% block title %}
-    Tasks - {{ block.super }}
+    Action Completed - {{ block.super }}
 {% endblock %}
 
 {% block content %}
