--- a/People/templates/people/delete.html
+++ b/People/templates/people/delete.html
@@ -1,12 +1,12 @@
 {% extends "base.html"  %}
 
 {% block title %}
-    Tasks Delete - {{ block.super }}
+    People Delete - {{ block.super }}
 {% endblock %}
 
 {% block content %}
 <div class="content">
-<h1>Delete Task</h1>
+<h1>Delete User</h1>
 <h3>User: {{ user.name }}</h3>
 <form action="" method="get">
     Secret Key: <input type="password" name="sk"><br>
