--- a/People/templates/people/index.html
+++ b/People/templates/people/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html"  %}
 
 {% block title %}
-    Tasks - {{ block.super }}
+    People - {{ block.super }}
 {% endblock %}
 
 {% block content %}
