--- a/Tasks/templates/tasks/index.html
+++ b/Tasks/templates/tasks/index.html
@@ -9,6 +9,7 @@
 <div class="content">
     <table class="tb">
         <tr class="tb">
+            <th class="tb"><a href="/tasks/" class="link">Clear Filters</a></th>
             <th class="tb"><a href="/tasks/filter/user" class="link">Filter Tasks (User)</a></th>
             <th class="tb"><a href="/tasks/filter/date" class="link">Filter Tasks (Date)</a></th>
         </tr>
