--- a/People/static/style.css
+++ b/People/static/style.css
@@ -172,3 +172,22 @@ tb{
     background-color: rgba(255, 0, 0, 0.7);
     color: white;
 }
+
+.desctitle{
+    border-top-width: 7px;
+    border-top-style: solid;
+    border-top-color: #ff1f7f;
+    border-right-width: 7px;
+    border-right-style: solid;
+    border-right-color: #ffa800;
+    border-left-width: 10px;
+    border-left-style: solid;
+    border-left-color: #28c4b9;
+    border-bottom-width: 7px;
+    border-bottom-style: solid;
+    border-bottom-color: #0000ff;
+    -webkit-border-radius: 7px;
+    -moz-border-radius: 7px;
+    border-radius: 7px;
+    padding:10px;
+}
