--- a/Tasks/templates/tasks/index.html
+++ b/Tasks/templates/tasks/index.html
@@ -42,7 +42,7 @@
 {% endif %}
 </div>
 <div class="content">
-    <a class="link" href="add"> Add some tasks for team users </a>
+    <a class="link" href="/tasks/add"> Add some tasks for team users </a>
 </div>
 {% endblock %}
 
