Added logs application

--- a/People/templates/people/add.html
+++ b/People/templates/people/add.html
@@ -10,16 +10,16 @@
 <form action="" method="get">
     <table class="formtable">
         <tr>
-            <th>First and Last name :</th> <th class="forminput"><input type="text" name="n"></th>
+            <th>First and Last name :</th> <th class="forminput"><input type="text" name="n" required></th>
         </tr>
         <tr>
-            <th>Birth Date:</th> <th class="forminput"><input type="date" name="bd"></th>
+            <th>Birth Date:</th> <th class="forminput"><input type="date" name="bd" required></th>
         </tr>
         <tr>
-            <th>Rank:</th> <th class="forminput"><input type="text" name="r"></th>
+            <th>Rank:</th> <th class="forminput"><input type="text" name="r" required></th>
         </tr>
         <tr>
-            <th>Secret Key:</th> <th class="forminput"><input type="password" name="sk"></th>
+            <th>Secret Key:</th> <th class="forminput"><input type="password" maxlength="5" name="sk" required></th>
         </tr>
     </table>
     <input type="submit" value="Add">
