Added account activation

--- a/People/templates/people/add.html
+++ b/People/templates/people/add.html
@@ -21,6 +21,9 @@
         <tr>
             <th>Secret Key:</th> <th class="forminput"><input type="password" maxlength="5" name="sk" required></th>
         </tr>
+        <tr>
+            <th>Email(only for confirmation):</th> <th class="forminput"><input type="email" name="e" required></th>
+        </tr>
     </table>
     <input type="submit" value="Add">
 </form>
