--- a/People/static/style.css
+++ b/People/static/style.css
@@ -114,7 +114,7 @@ th{
     text-align: left;
 }
 
-input[type=text], select, input[type=password], input[type=date], textarea{
+input[type=text], select, input[type=password], input[type=date], input[type=email], textarea{
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
