Added files and ideas tabs

--- a/People/templates/people/delete.html
+++ b/People/templates/people/delete.html
@@ -8,9 +8,10 @@
 <div class="content">
 <h1>Delete User</h1>
 <h3>User: {{ user.name }}</h3>
+<h6>Security Key is sent to admin email</h6>
 <form action="" method="get">
     Secret Key: <input type="password" name="sk"><br>
-    Admin Key: <input type="password" name="ak"><br>
+    Security Key: <input type="password" name="ak"><br>
     <input type="submit" value="Delete">
 </form>
 </div>
