--- a/Plans/templates/plans/description.html
+++ b/Plans/templates/plans/description.html
@@ -8,7 +8,7 @@
 <div class="content">
 <div class="desctitle">
 <h1><b>Plan: {{plan.name}}</b><br><i>Deadline: {{plan.deadline}}</i></h1>
-<p>{{plan.description|safe}}</p>
+<p>{{plan.description|safe|linebreaks}}</p>
 </div>
 </div>
 {% endblock %}
