--- a/Tasks/templates/tasks/index.html
+++ b/Tasks/templates/tasks/index.html
@@ -43,6 +43,7 @@
 </div>
 <div class="content">
     <a class="link" href="/tasks/add"> Add some tasks for team users </a>
+    <a class="link" href="/tasks/completed"> Completed Tasks </a>
 </div>
 {% endblock %}
 
