--- a/People/templates/base.html
+++ b/People/templates/base.html
@@ -15,7 +15,7 @@
 			<a class="navlink" href="/plans">Plans</a>
 			<a class="navlink" href="/ideas">Ideas</a>
 			<a class="navlink" href="/logs">Logs</a>
-			<a class="navlink" href="/cal">Calendar</a>
+			<a class="navlink" href="/calendar">Calendar</a>
 			<a class="navlink" href="/files">Files</a>
 			<a class="logout" href="/logout">Logout</a>
 		</nav>
