--- a/Plans/templates/plans/delete.html
+++ b/Plans/templates/plans/delete.html
@@ -8,6 +8,7 @@
 <div class="content">
 <h1>Delete Plan</h1>
 <h3>Admin</h3>
+<h6>Security Key is sent to admin email</h6>
 <form action="" method="get">
     Admin Password: <input type="password" name="ak"><br>
     <input type="submit" value="Delete">
