--- a/Ideas/templates/ideas/delete.html
+++ b/Ideas/templates/ideas/delete.html
@@ -1,16 +1,16 @@
 {% extends "base.html"  %}
 
 {% block title %}
-    Plans Delete - {{ block.super }}
+    Ideas Delete - {{ block.super }}
 {% endblock %}
 
 {% block content %}
 <div class="content">
-<h1>Delete Plan</h1>
+<h1>Delete Idea</h1>
 <h3>Admin</h3>
-<h6>Security Key is sent to admin email</h6>
+<h6>Secret Key is sent to admin email</h6>
 <form action="" method="get">
-    Admin Password: <input type="password" name="ak"><br>
+    Secret Key: <input type="password" name="sk"><br>
     <input type="submit" value="Delete">
 </form>
 </div>
