--- a/Plans/templates/plans/description.html
+++ b/Plans/templates/plans/description.html
@@ -7,8 +7,8 @@
 {% block content %}
 <div class="content">
 <div class="desctitle">
-<h1><b>Plan: {{plan.name}}</b></h1>
-<p>{{plan.description}}</p>
+<h1><b>Plan: {{plan.name}}</b><br><i>Deadline: {{plan.deadline}}</i></h1>
+<p>{{plan.description|safe|linebreaks}}</p>
 </div>
 </div>
 {% endblock %}
