--- a/Tasks/templates/tasks/indexC.html
+++ b/Tasks/templates/tasks/indexC.html
@@ -1,7 +1,7 @@
 {% extends "base.html"  %}
 
 {% block title %}
-    Tasks - {{ block.super }}
+    Tasks Completed - {{ block.super }}
 {% endblock %}
 
 {% block content %}
@@ -23,22 +23,20 @@
         <th class="peopletable ttitle">Name</th>
         <th class="peopletable ttitle">User</th>
         <th class="peopletable ttitle">Deadline</th>
+        <th class="peopletable ttitle">Completed on</th>
     </tr>
     {% for one in tasks %}
-    {% if one.isdead %}
-    <tr class="peopletable dead">
-    {% else %}
     <tr class="peopletable">
-    {% endif %}
         <th class="peopletable">{{ one.name }}</th>
         <th class="peopletable">{{ one.user }}</th>
         <th class="peopletable">{{ one.date }}</th>
-        <th class="peopletable"><a class="greenlink" href='{{ one.getdeletelink }}'>Complete</th>
+        <th class="peopletable">{{ one.completed_on }}</th>
+        <th class="peopletable"><a class="redlink" href='{{ one.getdeletelink }}'>Delete</a></th>
     </tr>
     {% endfor %}
     </table>
 {% else %}
-    <p>No tasks are available.</p>
+    <p>No tasks are completed.</p>
 {% endif %}
 </div>
 <div class="content">
