--- a/Calendar/templates/calendar/index.html
+++ b/Calendar/templates/calendar/index.html
@@ -6,7 +6,6 @@
 
 {% block content %}
 <div class="content">
-<h1>CFLLT Calendar</h1>
-<p>Coming Soon</p>
+<iframe src="https://teamup.com/ks1gtf2d3vhriavfja" frameborder="0" width="100%" height="700"></iframe>
 </div>
 {% endblock %}
