--- a/People/templates/base.html
+++ b/People/templates/base.html
@@ -12,11 +12,12 @@
 		<nav>
 			<a class="navlink" href="/tasks">Tasks</a>
 			<a class="navlink" href="/people">People</a>
+			<a class="navlink" href="/logs">Logs</a>
+			<a class="navlink" href="/files">Files</a>
 			<a class="navlink" href="/plans">Plans</a>
 			<a class="navlink" href="/ideas">Ideas</a>
-			<a class="navlink" href="/logs">Logs</a>
+			<a class="navlink" href="/s">Shortener</a>
 			<a class="navlink" href="/calendar">Calendar</a>
-			<a class="navlink" href="/files">Files</a>
 			<a class="logout" href="/logout">Logout</a>
 		</nav>
 		</div>
