--- a/People/static/style.css
+++ b/People/static/style.css
@@ -216,9 +216,9 @@ tb{
     margin-top: 15px;
     background-color: rgba(0, 255, 36, 0.9);
     color: white;
+    padding: 14px 25px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    border-radius: 5px;
 }
 
