--- a/People/static/style.css
+++ b/People/static/style.css
@@ -110,6 +110,25 @@ body{
     background-color: #0c5c04;
 }
 
+.orangelink{
+    border-radius: 5px;
+    width: 87%;
+}
+
+.orangelink:link, .orangelink:visited {
+    background-color: #ee7805;
+    color: white;
+    padding: 14px 25px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+}
+
+
+.orangelink:hover, .orangelink:active {
+    background-color: #b76512;
+}
+
 th{
     text-align: left;
 }
@@ -190,4 +209,40 @@ tb{
     -moz-border-radius: 7px;
     border-radius: 7px;
     padding:10px;
+}
+
+.inprogress{
+    padding: 14px 25px;
+    width: 87%;
+    /*margin-top: 15px;*/
+    background-color: rgba(14, 19, 127, 0.9);
+    color: white;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    border-radius: 5px;
+}
+
+.inprogress:after{
+    content: '';
+    -webkit-animation-duration: 2s;
+    -moz-animation-duration: 2s;
+    -o-animation-duration: 2s;
+    animation-duration: 2s;
+    -webkit-animation-name: loadingpoints;
+    -moz-animation-name: loadingpoints;
+    -o-animation-name: loadingpoints;
+    animation-name: loadingpoints;
+    -webkit-animation-iteration-count: infinite;
+    -moz-animation-iteration-count: infinite;
+    -o-animation-iteration-count: infinite;
+    animation-iteration-count: infinite;
+    
+}
+
+@keyframes loadingpoints {
+    0%{content: '   '}
+    33%{content: '.  '}
+    66%{content: '.. '}
+    100%{content: '...'}
 }
