--- a/Tasks/templates/tasks/index.html
+++ b/Tasks/templates/tasks/index.html
@@ -49,6 +49,7 @@
 <div class="content">
     <a class="link" href="/tasks/add"> Add some tasks for team users </a>
     <a class="link" href="/tasks/completed"> Completed Tasks </a>
+    <a class="{{ status }}" href="/tasks/stats">Statistics</a>
 </div>
 {% endblock %}
 
