--- a/Tasks/templates/tasks/indexC.html
+++ b/Tasks/templates/tasks/indexC.html
@@ -8,7 +8,7 @@
 {% if tasks %}
 <div class="content">
     <a class="{{ status }}" style="width: 46.6%" href="/tasks/stats">Statistics</a>
-    <a class="link" style="width: 46.3%" href="/tasks">Tasks Home</a>
+    <a class="link" style="width: 46.3%" href="/tasks">Tasks Home</a><br>
 </div>
 {% endif %}
 <div class="content">
